--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "ejs": "^3.1.7",
     "express": "^4.18.0",
     "express-fileupload": "^1.3.1",
     "jsonwebtoken": "^8.5.1",
