--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^3.13.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "cron": "^2.0.0",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.7",
     "express": "^4.18.0",
