--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "abingdon-multicast",
+  "name": "abingdon-publishing",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
