--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^3.13.0",
+    "apicache": "^1.6.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cron": "^2.0.0",
