--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "express": "^4.18.0",
     "express-fileupload": "^1.3.1",
     "jsonwebtoken": "^8.5.1",
-    "winston": "^3.7.2"
+    "winston": "^3.7.2",
+    "winston-daily-rotate-file": "^4.6.1"
   },
   "devDependencies": {
     "prisma": "^3.13.0"
